external ui changes

--- a/react/package.json
+++ b/react/package.json
@@ -6,16 +6,18 @@
     "@deck.gl/geo-layers": "^8.6.4",
     "@deck.gl/layers": "^8.6.3",
     "@deck.gl/react": "^8.6.3",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@mapbox/mapbox-gl-geocoder": "^4.7.4",
     "@mapbox/polyline": "^1.1.1",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.26.0",
     "deck.gl": "^8.6.3",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
