adjust datecomponent add meta info

--- a/react/package.json
+++ b/react/package.json
@@ -2,6 +2,7 @@
   "name": "layers",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@deck.gl/geo-layers": "^8.6.4",
     "@deck.gl/layers": "^8.6.3",
