--- a/react/public/manifest.json
+++ b/react/public/manifest.json
@@ -1,7 +1,13 @@
 {
-  "short_name": "Hiekkalaatikko",
+  "short_name": "Blip",
   "name": "Mapping sandbox",
-  "icons": [],
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
