very serious commit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "layers",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://Napuu.github.io/junction2k21/",
   "dependencies": {
     "@deck.gl/geo-layers": "^8.6.4",
     "@deck.gl/layers": "^8.6.3",
